syntax = "proto3";
package exposer;

option go_package = "github.com/hyperweb-io/starship/exposer/exposer";

message Mnemonic {
  string name = 1;
  string type = 2;
  string mnemonic = 3;
}

message Keys {
  repeated Mnemonic genesis = 1;
  repeated Mnemonic validators = 2;
  repeated Mnemonic keys = 3;
  repeated Mnemonic relayers = 4;
  repeated Mnemonic faucet = 5;
  repeated Mnemonic relayers_cli = 6;
}

message TypeKey {
  string type = 1;
  string value = 2;
}

message PrivValidatorKey {
  string address = 1;
  TypeKey pub_key = 2 [ json_name = "pub_key" ];
  TypeKey priv_key = 3 [ json_name = "priv_key" ] ;
}

message NodeKey {
  TypeKey priv_key = 1 [ json_name = "priv_key" ];
}
