syntax = "proto3";
package exposer;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";
import "google/protobuf/descriptor.proto";

import "exposer/mnemonic.proto";
import "exposer/node.proto";

option go_package = "github.com/hyperweb-io/starship/exposer/exposer";

// Interface for service
service Exposer {
  // GetNodeID will returns current node id
  rpc GetNodeID(google.protobuf.Empty) returns (ResponseNodeID) {
    option (google.api.http) = { get: "/node_id" };
  }
  // GetPubKey returns the public key of the current node
  rpc GetPubKey(google.protobuf.Empty) returns (ResponsePubKey) {
    option (google.api.http) = { get: "/pub_key" };
  }
  // GetGenesisFile returns the genesis file of the node
  rpc GetGenesisFile(google.protobuf.Empty) returns (google.protobuf.Struct) {
    option (google.api.http) = { get: "/genesis" };
  }
  // GetKeysFile returns the keys of the node
  rpc GetKeys(google.protobuf.Empty) returns (Keys) {
    option (google.api.http) = { get: "/keys" };
  }
  // GetPrivKeys returns the keys of the node
  rpc GetPrivKey(google.protobuf.Empty) returns (PrivValidatorKey) {
    option (google.api.http) = { get: "/priv_keys" };
  }
  // GetPrivState returns the keys of the node
  rpc GetPrivValidatorState(google.protobuf.Empty) returns (PrivValidatorState) {
    option (google.api.http) = { get: "/priv_validator_state" };
  }
  // GetNodeKey returns the keys of the node
  rpc GetNodeKey(google.protobuf.Empty) returns (NodeKey) {
    option (google.api.http) = { get: "/node_key" };
  }
  // Service functions for Relayer
  // CreateChannel creates channel between 2 given chains
  rpc CreateChannel(RequestCreateChannel) returns (ResponseCreateChannel) {
    option (google.api.http) = { post: "/create_channel", body: "*" };
  }
}

message ResponseNodeID {
  string node_id = 1 [ json_name = "node_id" ];
}

message ResponsePubKey {
  string type = 1;
  string key = 2;
}

message ResponseFileData {
  bytes data = 1;
}

message RequestCreateChannel {
  string a_chain = 1 [ json_name = "a_chain" ];
  // if a_connection is not specified then a new connection is formed
  optional string a_connection = 2 [ json_name = "a_connection" ];
  // needs to be defined if a_connection is not defined
  optional string b_chain = 3 [ json_name = "b_chain" ];
  string a_port = 4 [ json_name = "a_port" ];
  string b_port = 5 [ json_name = "b_port" ];
  optional string channel_version = 6 [ json_name = "channel_version" ];
  optional string order = 7;
}

message ResponseCreateChannel {
  string status = 1;
}
